[project]
name = "maldi-metabolomics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anndata==0.12.8",
    "array-api-compat==1.13.0",
    "contourpy==1.3.3",
    "cuda-bindings==12.9.4",
    "cuda-pathfinder==1.3.3",
    "cycler==0.12.1",
    "donfig==0.8.1.post1",
    "et-xmlfile==2.0.0",
    "filelock==3.20.3",
    "fonttools==4.61.1",
    "fsspec==2026.1.0",
    "google-crc32c==1.8.0",
    "h5py==3.15.1",
    "igraph==1.0.0",
    "imageio==2.37.2",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "kiwisolver==1.4.9",
    "lazy-loader==0.4",
    "legacy-api-wrap==1.5",
    "leidenalg==0.11.0",
    "llvmlite==0.46.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mpmath==1.3.0",
    "narwhals==2.15.0",
    "natsort==8.4.0",
    "networkx==3.6.1",
    "numba==0.63.1",
    "numcodecs==0.16.5",
    "numpy==2.3.5",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.4.5",
    "nvidia-nvtx-cu12==12.8.90",
    "opencv-python==4.13.0.90",
    "openpyxl==3.1.5",
    "packaging==26.0",
    "pandas==2.3.3",
    "patsy==1.0.2",
    "pillow==12.1.0",
    "plotly==6.5.2",
    "pyimzml==1.5.5",
    "pynndescent==0.6.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "scanpy==1.11.5",
    "scikit-image==0.26.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "seaborn==0.13.2",
    "session-info2==0.3",
    "six==1.17.0",
    "statsmodels==0.14.6",
    "sympy==1.14.0",
    "texttable==1.7.0",
    "threadpoolctl==3.6.0",
    "tifffile==2026.1.14",
    "torch==2.10.0",
    "tqdm==4.67.1",
    "triton==3.6.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "umap-learn==0.5.11",
    "wheezy-template==3.2.4",
    "zarr==3.1.5",
]
